Kubernetes/tesla/srv.yml
apiVersion: v1
kind: Service
metadata:
  name: teslacars-service
spec:
  type: NodePort
  selector:
    app: teslacars
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
