Kubernetes/tesla/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teslacars-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teslacars-service
                port:
                  number: 80
